<resources>
    <string name="app_name">seeMe</string>
    <string name="add_availability">add availability</string>
    <string name="date">10:00–12:00 24.08</string>
    <string name="time">Time</string>
    <string name="set_name">set name</string>
    <string name="jhon">Jhon</string>
    <string name="view_list">view list</string>
    <string name="name">Name</string>
    <string name="chosen_date">Chosen date</string>
    <string name="delete">delete</string>
    <string name="st_of_avail">set start hour of availability</string>
    <string name="ed_of_avail">set end hour of availability</string>
    <string name="day_of_avail">set day of availability</string>
    <string name="set_time">set time</string>
    <string name="day_to_see">set day to see</string>
    <string name="deleteAvailability">delete availability</string>
    <string name="view_availability">view availability</string>
    <string name="people">people</string>
    <string name="shareAvailability">share your Time</string>
    <string name="new_group">new group</string>
    <string name="change_group">change group</string>
    <string name="add_member">add member</string>
    <string name="lama">lama</string>
    <string name="ip">0.0.0.0</string>
    <string name="set_group">set group</string>
    <string name="goodChars">^[a-zA-Z0-9]+$</string>
    <string name="pass">*****</string>
    <string name="set_password">set password</string>
    <string name="set_name_password">set name and password</string>
    <string name="group_settings">group settings</string>
    <string name="delete_member">delete member</string>
    <string name="delete_group">delete group</string>
</resources>